fix: changed styles good hangs and badges sections on tablet and mobile devices (#3096)

--- a/assets/styles/components/_GoodHands.scss
+++ b/assets/styles/components/_GoodHands.scss
@@ -102,7 +102,8 @@
 	}
 
 	.wrapper {
-		padding: 0;
+		padding-top: 1.5em;
+		padding-bottom: 1.5em;
 	}
 
 	body:not(.home) & {
@@ -206,9 +207,9 @@
 		text-align: left;
 
 		.wrapper {
+			padding: 0 1.25em !important;
 			display: flex;
 			align-items: center;
-			padding: 0 !important;
 		}
 
 		&__button {
